notebook roda pelo Vscode e JoptionPane funciona

--- a/Atividades/Atv07/notebook/Atv07.ipynb
+++ b/Atividades/Atv07/notebook/Atv07.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -98,6 +98,8 @@
     "//Imprime na tela do terminala média\n",
     "System.out.println(\"MÉDIA ARITMÉTICA DA TURMA: \"+sumNotas/5);\n",
     "\n",
+    "//Mostra no JoptionPane os resultados obtidos\n",
+    "JOptionPane.showMessageDialog(null,\"Array original: \"+arrayOriginal + \"\\n\" +\"Array decrescente: \"+arrayNova+ \"\\n\"+ \"Média da turma: \"+sumNotas/5+ \"\\n\");\n",
     "       \n",
     "        \n",
     "        \n",
