--- a/Atividades/Atv08/notebook/Atv08.ipynb
+++ b/Atividades/Atv08/notebook/Atv08.ipynb
@@ -2,15 +2,301 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Insira um número: \n",
+      "\n",
+      "Digite 1 para atribuir assentos na primeira classe \n",
+      "\n",
+      "Digite 2 para atribuir assentos na classe econômica \n",
+      "\n",
+      "Você escolheu a classe primária\n",
+      "Poltrona atribuída: 1\n",
+      "\n",
+      "Gráfico de poltronas: [true, false, false, false, false, false, false, false, false, false]\n",
+      "Insira um número: \n",
+      "\n",
+      "Digite 1 para atribuir assentos na primeira classe \n",
+      "\n",
+      "Digite 2 para atribuir assentos na classe econômica \n",
+      "\n",
+      "Você escolheu a classe primária\n",
+      "Poltrona atribuída: 2\n",
+      "\n",
+      "Gráfico de poltronas: [true, true, false, false, false, false, false, false, false, false]\n",
+      "Insira um número: \n",
+      "\n",
+      "Digite 1 para atribuir assentos na primeira classe \n",
+      "\n",
+      "Digite 2 para atribuir assentos na classe econômica \n",
+      "\n",
+      "Você escolheu a classe econômica\n",
+      "Poltrona escolhida: 5\n",
+      "\n",
+      "Gráfico de poltronas: [true, true, false, false, false, true, false, false, false, false]\n",
+      "\n",
+      "Insira um número: \n",
+      "\n",
+      "Digite 1 para atribuir assentos na primeira classe \n",
+      "\n",
+      "Digite 2 para atribuir assentos na classe econômica \n",
+      "\n",
+      "Você escolheu a classe econômica\n",
+      "Poltrona escolhida: 6\n",
+      "\n",
+      "Gráfico de poltronas: [true, true, false, false, false, true, true, false, false, false]\n",
+      "\n",
+      "Insira um número: \n",
+      "\n",
+      "Digite 1 para atribuir assentos na primeira classe \n",
+      "\n",
+      "Digite 2 para atribuir assentos na classe econômica \n",
+      "\n",
+      "Você escolheu a classe econômica\n",
+      "Poltrona escolhida: 7\n",
+      "\n",
+      "Gráfico de poltronas: [true, true, false, false, false, true, true, true, false, false]\n",
+      "\n",
+      "Insira um número: \n",
+      "\n",
+      "Digite 1 para atribuir assentos na primeira classe \n",
+      "\n",
+      "Digite 2 para atribuir assentos na classe econômica \n",
+      "\n",
+      "Você escolheu a classe econômica\n",
+      "Poltrona escolhida: 8\n",
+      "\n",
+      "Gráfico de poltronas: [true, true, false, false, false, true, true, true, true, false]\n",
+      "\n",
+      "Insira um número: \n",
+      "\n",
+      "Digite 1 para atribuir assentos na primeira classe \n",
+      "\n",
+      "Digite 2 para atribuir assentos na classe econômica \n",
+      "\n",
+      "Você escolheu a classe econômica\n",
+      "Poltrona escolhida: 9\n",
+      "\n",
+      "Gráfico de poltronas: [true, true, false, false, false, true, true, true, true, true]\n",
+      "\n",
+      "Insira um número: \n",
+      "\n",
+      "Digite 1 para atribuir assentos na primeira classe \n",
+      "\n",
+      "Digite 2 para atribuir assentos na classe econômica \n",
+      "\n",
+      "A classe econômica está cheia\n",
+      "Deseja comprar uma poltrona na classe 1? (s/n)\n",
+      "Você comprou a poltrona 3 na classe primária\n",
+      "\n",
+      "Gráfico de poltronas: [true, true, true, false, false, true, true, true, true, true]\n",
+      "\n",
+      "Insira um número: \n",
+      "\n",
+      "Digite 1 para atribuir assentos na primeira classe \n",
+      "\n",
+      "Digite 2 para atribuir assentos na classe econômica \n",
+      "\n",
+      "Você escolheu a classe primária\n",
+      "Poltrona atribuída: 4\n",
+      "\n",
+      "Gráfico de poltronas: [true, true, true, true, false, true, true, true, true, true]\n",
+      "Insira um número: \n",
+      "\n",
+      "Digite 1 para atribuir assentos na primeira classe \n",
+      "\n",
+      "Digite 2 para atribuir assentos na classe econômica \n",
+      "\n",
+      "A classe econômica está cheia\n",
+      "Deseja comprar uma poltrona na classe 1? (s/n)\n",
+      "Você comprou a poltrona 5 na classe primária\n",
+      "\n",
+      "Gráfico de poltronas: [true, true, true, true, true, true, true, true, true, true]\n",
+      "\n",
+      "Insira um número: \n",
+      "\n",
+      "Digite 1 para atribuir assentos na primeira classe \n",
+      "\n",
+      "Digite 2 para atribuir assentos na classe econômica \n",
+      "\n",
+      "A classe econômica está cheia\n",
+      "Deseja comprar uma poltrona na classe 1? (s/n)\n",
+      "O próximo voo parte em 3 horas\n"
+     ]
+    }
+   ],
+   "source": [
+    "boolean[] poltronas1 = {false,false,false,false,false};//declaração e inicialização da array com os assentos da classe primária\n",
+    "\n",
+    "boolean[] poltronasEconomicas = {false,false,false,false,false};//declaração e inicialização da array com os assentos da classe economica\n",
+    "\n",
+    "boolean[] poltronasResultantes = new boolean[10];//Declaração e inicialização da array que vai receber a soma de poltronas1 e poltronasEconomicas  \n",
+    "\n",
+    "Scanner dados= new Scanner(System.in); //Inicia a classe Scanner para entrada de dados.\n",
+    "Scanner respostaLotado= new Scanner(System.in); //Inicia a classe Scanner para entrada de outros dados.\n",
+    "\n",
+    "boolean verificador = true;//Variável para manter o while executando\n",
+    "\n",
+    "int index1=0;//Variável para contar quantas vezes assentos primarios foram compradas\n",
+    "int index2=0;//Variável para contar quantas vezes assentos primarios foram comprados\n",
+    "\n",
+    "while (verificador){\n",
+    "    int contAssentosEconomica = 5;\n",
+    "    \n",
+    "    System.out.println(\"Insira um número: \"+ \"\\n\"); //Imprime a mensagem de escolha.\n",
+    "    System.out.println(\"Digite 1 para atribuir assentos na primeira classe \"+ \"\\n\");\n",
+    "    System.out.println(\"Digite 2 para atribuir assentos na classe econômica \"+ \"\\n\");\n",
+    "    int input = dados.nextInt(); //Declara e inicia a variável input\n",
+    "    \n",
+    "\n",
+    "    if (input ==1 && index1<5) {//Início do if se o input for 1 e a variável contadora for menor que 5\n",
+    "\n",
+    "        poltronas1[index1]=true;//Define o elemento da array na posição do index1 como true\n",
+    "        index1++;//Incremento da variável index1 para que seja atribuído uma nova posição na lista a cada iteração.\n",
+    "            \n",
+    "        //metódo arraycopy que copia a array poltronas1 para a array poltronasResultantes\n",
+    "        //ordem dos argumentos(Object arrayOriginal, int posicao_arrayOriginal, Object arrayDestino,int posicaoarrayDestino, int tamanho_ArrayOriginal)\n",
+    "        System.arraycopy(poltronas1, 0, poltronasResultantes, 0, poltronas1.length);\n",
+    "        //metódo arraycopy que copia a array poltronasEconomicas para a Array poltronasResultantes  \n",
+    "        System.arraycopy(poltronasEconomicas, 0, poltronasResultantes, poltronas1.length,poltronasEconomicas.length);  \n",
+    "                \n",
+    "        System.out.println(\"Você escolheu a classe primária\");//Imprime a mensagem de qual classe foi atribuída\n",
+    "\n",
+    "        System.out.println(\"Poltrona atribuída: \"+(index1)+\"\\n\");//Imprime a mensagem do número de poltrona atribuída\n",
+    "\n",
+    "        System.out.println(\"Gráfico de poltronas: \"+Arrays.toString(poltronasResultantes)); //Imprime a Array poltronas resultantes\n",
+    "    }//Fim do if\n",
+    "\n",
+    "\n",
+    "    else if (input == 1 && index1 >=5){//Início do if caso o input seja 1 e TODAS as poltronas da classe primária estajam compradas (index1>=5)\n",
+    "\n",
+    "        //Imprime a mensagem da lotação de assentos na primeira classe\n",
+    "        System.out.println(\"A Primeira classe está cheia\");\n",
+    "\n",
+    "\n",
+    "        //Imprime a mensagem se o usuário deseja comprar uma poltrona na classe econômica.\n",
+    "        System.out.println(\"Deseja comprar uma poltrona na classe econômica? (s/n)\");\n",
+    "        //Declara e inicialização da variável que lê o input do usuário\n",
+    "        String resposta1 = respostaLotado.nextLine();\n",
+    "        \n",
+    "\n",
+    "        if (resposta1.equals(\"s\") ){//Início do if caso o cliente queira comprar assentos na classe econômica\n",
+    "            \n",
+    "            \n",
+    "            int IndexRealClasse2 = (index2+contAssentosEconomica);//Variável IndexRealClasse2 para descobrir a posição da classe econômica na Array poltronasResultantes\n",
+    "            //se index2 é 0, contAssentosEconomicas é 5. O assento da classe econômica vai estar na posição 5 da array poltronasResultantes\n",
+    "            \n",
+    "            if (poltronasResultantes[IndexRealClasse2] == false){//Inicio do if caso o assento na classe econômica esteja desocupado\n",
+    "                \n",
+    "\n",
+    "                poltronasResultantes[IndexRealClasse2]=true;//Define o elemento da array na posição do IndexRealClasse2 como true, ou seja define a poltrona como comprada\n",
+    "                \n",
+    "                \n",
+    "                boolean[] novasPoltronas = Arrays.copyOfRange(poltronasResultantes, 5, 10);//copia o array poltronasResultantes da posição 5 a 10\n",
+    "\n",
+    "                poltronasEconomicas=novasPoltronas;//Array poltronasEconomicas recebe array novasPoltronas para não haver divergência nos gráficos\n",
+    "\n",
+    "                System.out.println(\"Você comprou a poltrona \"+(IndexRealClasse2+1)+ \" na classe econômica\"+\"\\n\");//Imprime a mensagem de qual poltrona foi comprada\n",
+    "                System.out.println(\"Gráfico de poltronas: \"+Arrays.toString(poltronasResultantes)+\"\\n\");//Mostra o gráfico de poltronas\n",
+    "                \n",
+    "                index2++;//Incremento da variável contador index2++ para atualizar posição que dever ser atribuida\n",
+    "                contAssentosEconomica--;//Decrimento do contAssentosEconomica em -1 para ser somado com index2 e imprimir o número correto da  poltrona comprada\n",
+    "            }//Fim do if\n",
+    "        }//Fim do if\n",
+    "        \n",
+    "\n",
+    "        \n",
+    "        if (resposta1.equals(\"n\")){//Inío do if caso o cliente não queira comprar assentos na classe econômica\n",
+    "            //Impressão da mensagem\n",
+    "            System.out.println(\"O próximo voo parte em 3 horas.\");\n",
+    "            break;//comando break para encerrar o programa\n",
+    "        }//Fim do if\n",
+    "    }\n",
+    "\n",
+    "    if (input ==2 && index2<=4) {//If caso o usuário queira comprar assentos na classe economica e ainda tenha assentos disponíveis nesse classe (index2<=4)\n",
+    "        \n",
+    "\n",
+    "        poltronasEconomicas[index2]=true;//Define o elemento da array na posição do index2 como true\n",
+    "        index2++;//Incremento da variável index2 para que seja atribuído uma nova posição na array a cada iteração.\n",
+    "        contAssentosEconomica--;//Decrimento do contAssentosEconomica em -1 para ser somado com index2 e imprimir o número correto da  poltrona comprada\n",
+    "        \n",
+    "        //metódo arraycopy para copiar a array poltronasEconomicas para a array poltronasResultantes\n",
+    "        System.arraycopy(poltronasEconomicas, 0, poltronasResultantes, poltronas1.length,poltronasEconomicas.length); \n",
+    "        //metódo arraycopy para copiar a array poltronas1 para a array poltronasResultantes \n",
+    "        System.arraycopy(poltronas1, 0, poltronasResultantes, 0, poltronas1.length); \n",
+    "\n",
+    "        //Imprime mensagem da classe atibúida\n",
+    "        System.out.println(\"Você escolheu a classe econômica\");\n",
+    "\n",
+    "    \n",
+    "        //Imprime a mensagem da poltrona escolhida com a soma da variável contadora index2 e contAssentosEconomica que começa em 5 e decresce a cada iteração\n",
+    "        System.out.println(\"Poltrona escolhida: \"+ (index2+contAssentosEconomica)+\"\\n\");\n",
+    "\n",
+    "        //Imprime o gráfico das poltronas disponíveis e ocupadas\n",
+    "        System.out.println(\"Gráfico de poltronas: \"+Arrays.toString(poltronasResultantes)+\"\\n\");\n",
+    "    }//Fim do if\n",
+    "\n",
+    "    else if(input ==2 && index2>4){//Início do if caso o input seja 2 e TODAS as poltronas da classe econômica estajam compradas (index2>=5)\n",
+    "        //Imprime a mensagem da lotação da classe economica\n",
+    "        System.out.println(\"A classe econômica está cheia\");\n",
+    "    \n",
+    "        //imprime a mensagem de escolha do usuário\n",
+    "        System.out.println(\"Deseja comprar uma poltrona na classe 1? (s/n)\");\n",
+    "        //variável resposta que lê o input do usuario\n",
+    "        String resposta = respostaLotado.nextLine();\n",
+    "        \n",
+    "\n",
+    "        if (resposta.equals(\"s\")){//Se a resposta for a string s que indica sim, o seguinte if é executado\n",
+    "\n",
+    "            \n",
+    "            if (poltronas1[index1] == false){//se a poltrona na classe primária na posição do index1 estiver desocupada \n",
+    "                poltronas1[index1]=true;//Define a poltrona como ocupada, ou seja, define o elemento da array poltronas1 na posição do index1 como true\n",
+    "                poltronasResultantes[index1]=true;//Define o elemento da array poltronasResultantes na posição do index1 como true para que não haja divergência nos gráficos\n",
+    "                index1++;//incremento do index1 para que o sistema atribuia um novo assento ao usuário\n",
+    "\n",
+    "                //Imprime o número da poltrona comprada\n",
+    "                System.out.println(\"Você comprou a poltrona \"+(index1)+ \" na classe primária\"+\"\\n\");\n",
+    "                //imprime o gráfico de poltronas atual.\n",
+    "                System.out.println(\"Gráfico de poltronas: \"+Arrays.toString(poltronasResultantes)+\"\\n\");\n",
+    "                \n",
+    "            }\n",
+    "                \n",
+    "        }//Fim do if\n",
+    "\n",
+    "        if (resposta.equals(\"n\")){//se a resposta for a string n que indica não, o seguinte bloco de código é executado\n",
+    "            System.out.println(\"O próximo voo parte em 3 horas\");//Impressão da segunite mensagem\n",
+    "            break;//FInaliza o programa\n",
+    "        }//fim do if\n",
+    "    }\n",
+    "    \n",
+    "}\n",
+    "dados.close();//Fechando objetos scanner\n",
+    "respostaLotado.close();//Fechando objeto scanner "
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Java",
+   "language": "java",
+   "name": "java"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": "java",
+   "file_extension": ".jshell",
+   "mimetype": "text/x-java-source",
+   "name": "Java",
+   "pygments_lexer": "java",
+   "version": "11.0.18+10-post-Ubuntu-0ubuntu122.04"
   },
   "orig_nbformat": 4
  },
